# android_tools_build

./: .gitignore  CMakeLists.txt  README.md  apply_patch.sh  build.sh  sync.sh
cmake/: aprotoc.cmake  dtc.cmake  erofs_extract.cmake  fs_mgr.cmake  include.cmake  libavb.cmake  libbase.cmake  libbrillo.cmake  libbrotli.cmake  libbsdiff.cmake  libbz.cmake  libchrome.cmake  libcutils.cmake  libdivsufsort.cmake  liberofs.cmake  libevent.cmake  libext2_com_err.cmake  libext2fs.cmake  libext2fs_com_err.cmake  libfec.cmake  libfec_rs.cmake  libgflags.cmake  libgtest.cmake  liblz4.cmake  liblzma.cmake  libmodpb64.cmake  libselinux.cmake  libsnapshot_cow.cmake  libsquashfs_utils.cmake  libverity_tree.cmake  libxz.cmake  libziparchive.cmake  libzstd.cmake  libzucchini.cmake  pcre2.cmake  protobuf.cmake  puffin.cmake  update_engine.cmake
patches/core/: mkbootfs-archive_dir-ignores-only-dir-header.patch
src/dtc/: Android.bp  BUILD.bazel  METADATA  Makefile  OWNERS  dtc-lexer.c  dtc-parser.c
src/dtc/libfdt/: Android.bp  fdt.c
src/e2fsprogs/debugfs/: debug_cmds.c
src/e2fsprogs/lib/blkid/: blkid_types.h
src/e2fsprogs/lib/ext2fs/: ext2_err.c  ext2_types.h
src/e2fsprogs/lib/uuid/: uuid_types.h
src/e2fsprogs/misc/: default_profile.c
src/erofs-utils/lib/: config.c
src/erofs_extract/: ExtractHelper.cpp  ExtractOperation.cpp  main.cpp
src/erofs_extract/include/: ExtractOperation.h  Logging.h
src/libchrome/base/files/: file_descriptor_watcher_posix.cc
src/libchrome/base/threading/: thread_restrictions.h
src/libufdt/tests/libufdt_verify/: ufdt_test_overlay.cpp
src/libufdt/utils/src/: Android.bp  dt_table.h  dt_table_core.h  mkdtboimg.py
src/libufdt/utils/tests/: mkdtboimg_testdata.sh
src/libufdt/utils/tests/data/: mkdtboimg.cfg
src/logging/liblog/: logd_writer.cpp  logger_write.cpp  pmsg_writer.cpp
src/logging/liblog/include/android/: log.h
src/logging/liblog/tests/: liblog_test.cpp
src/pcre/: aclocal.m4  configure
src/pcre/src/: config.h
